--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <link rel="stylesheet" type="text/css" href="personal-portfolio.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Meeseeks - Personal Portfolio</title>
+    <title>Hnss - A Person Who Create Things People Need.</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                 </a>
             </div>
             <div class="project">
-                <a href="http://meeseeks.cn/projects/goodthings/" target="_blank">
+                <a href="/projects/goodthings/" target="_blank">
                     <img src="https://s3.bmp.ovh/imgs/2022/04/28/c581eb9805827586.png" class="project-img"
                         alt="10 Good Things">
                     <p class="project-title">10 Good Things</p>
