update project notifications

--- a/projects/webDM/notifications-menu/index.html
+++ b/projects/webDM/notifications-menu/index.html
@@ -8,10 +8,10 @@
     <title>Notifications Menu</title>
 </head>
 <body>
-    <main class="container">
-        <div class="title">
+    <main class="container shadow">
+        <div class="title flex">
             <span>Notifications</span>
-            <div class="mark">
+            <div class="mark flex">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-checks" width="27" height="23" viewBox="0 0 24 20" stroke-width="1.5" stroke="#3475dd" fill="none">
                     <path d="M7 12l5 5l10 -10" />
                     <path d="M2 12l5 5m5 -5l5 -5" />
@@ -19,17 +19,17 @@
                 <span class="mark-action"><a>Mark as read</a></span>
             </div>
         </div>
-        <div class="messages">
-            <div class="message">
+        <div class="messages flex">
+            <div class="message flex">
                 <div class="is-read">
                     <div class="unread"></div>
                 </div>
-                <div class="message-content">
+                <div class="message-content flex">
                     <p>There is a new updated version of our sofware available.</p>
                     <div class="message-time">Sep 14, 2021 at 10:11 AM</div>
                 </div>
                 <div class="message-icon">
-                    <div class="icon-box icon-flex"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alert-circle" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <div class="icon-box icon-flex flex"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alert-circle" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <circle cx="12" cy="12" r="9" />
                         <line x1="12" y1="8" x2="12" y2="12" />
@@ -37,11 +37,11 @@
                       </svg></div>
                 </div>
             </div>
-            <div class="message">
+            <div class="message flex">
                 <div class="is-read">
                     <div class="unread"></div>
                 </div>
-                <div class="message-content">
+                <div class="message-content flex">
                     <div>I'm ready to answer all your questions about onboarding.</div>
                     <div class="message-time">Julien Gromik · Sep 12, 2021 at 10:14 AM</div>
                 </div>
@@ -49,16 +49,16 @@
                     <div class="icon-box face"></div>
                 </div>
             </div>
-            <div class="message">
+            <div class="message flex">
                 <div class="is-read">
                     <div class="unread"></div>
                 </div>
-                <div class="message-content">
+                <div class="message-content flex">
                     <div>You received a new message in your box from our support.</div>
                     <div class="message-time">Sep 11, 2021 at 08:14 AM</div>
                 </div>
                 <div class="message-icon">
-                    <div class="icon-box icon-flex"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <div class="icon-box icon-flex flex"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <rect x="3" y="5" width="18" height="14" rx="2" />
                         <polyline points="3 7 12 13 21 7" />
