add profile widget project

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                         <p class="project-title">Notifications Menu</p>
                     </a>
                 </div>
+                <div class="project">
+                    <a href="/projects/webDM/profile-widget/" target="_blank">
+                        <img src="./public/img/profile-widget.png" class="project-img"
+                            alt="Profile Widget" width="318" height="240">
+                        <p class="project-title">Profile Widget</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
