--- a/index.html
+++ b/index.html
@@ -1,107 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" type="text/css" href="style/ishadeed.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <link rel="stylesheet" type="text/css" href="style/ishadeed.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
     <title>Hnss - A Person Who Create Things People Need.</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main class="container">
-        <header class="navbar">
-            <ul>
-                <li><a href="#welcome-section">Home</a></li>
-                <li><a href="#projects">Work</a></li>
-            </ul>
-        </header>
-        <section class="welcome-section" id="welcome-section">
-            <h2>A person who create things people need.</h2>
-            <p>I’m Lu Ling (ID: Hnss), Product Manager, Digital Product Creator and Self-taught Front-End Developer. I enjoy creating things which meet people's needs.</p>
-        </section>
-        <section class="projects" id="projects">
-            <h2>My Projects<!-- / <a href="https://codepen.io/hnss" alt="Profile Link" id="profile-link" target="_blank">Show all &nbsp;<i
-                class="fa fa-chevron-right" aria-hidden="true"></i></a>--></h2>
-            <div class="project-area">
-                <div class="project">
-                    <a href="/projects/webDM/login-screen/" target="_blank">
-                        <img src="./public/img/desktop-normal-state.jpg" class="project-img"
-                            alt="Login Screen" width="318" height="240">
-                        <p class="project-title">Login Screen</p>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="/projects/goodthings/" target="_blank">
-                        <img src="https://s3.bmp.ovh/imgs/2022/04/28/c581eb9805827586.png" class="project-img"
-                            alt="10 Good Things" width="318" height="240">
-                        <p class="project-title">10 Good Things</p>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="/projects/webDM/notifications-menu/" target="_blank">
-                        <img src="./public/img/notic-menu.png" class="project-img"
-                            alt="Notifications Menu" width="318" height="240">
-                        <p class="project-title">Notifications Menu</p>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="/projects/webDM/profile-widget/" target="_blank">
-                        <img src="./public/img/profile-widget.png" class="project-img"
-                            alt="Profile Widget" width="318" height="240">
-                        <p class="project-title">Profile Widget</p>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://codepen.io/hnss/full/YzYMOpx" target="_blank">
-                        <img src="https://s3.bmp.ovh/imgs/2022/04/24/3f9033123bf676c6.png" class="project-img"
-                            alt="Technical Documentation Page" width="318" height="240">
-                        <p class="project-title">Technical Documentation</p>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://codepen.io/hnss/full/LYeaxOZ" target="_blank">
-                        <img src="https://s3.bmp.ovh/imgs/2022/04/24/d4f9518e4b4741d2.png" class="project-img"
-                            alt="Survey Form" width="318" height="240">
-                        <p class="project-title">Survey Form</p>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://codepen.io/hnss/full/OJzdwqB" target="_blank">
-                        <img src="https://s3.bmp.ovh/imgs/2022/04/24/ffbabfc9054be9bc.png" class="project-img"
-                            alt="Tribute Page" width="318" height="240">
-                        <p class="project-title">Tribute Page</p>
-                    </a>
-                </div>
-            </div>
-        </section>
+      <header class="navbar">
+        <ul>
+          <li><a href="#welcome-section">Home</a></li>
+          <li><a href="#projects">Work</a></li>
+        </ul>
+      </header>
+      <section class="welcome-section" id="welcome-section">
+        <h2>A person who create things people need.</h2>
+        <p>
+          I’m Lu Ling (ID: Hnss), Product Manager, Digital Product Creator and
+          Self-taught Front-End Developer. I enjoy creating things which meet
+          people's needs.
+        </p>
+      </section>
+      <section class="projects" id="projects">
+        <h2>
+          My Projects<!-- / <a href="https://codepen.io/hnss" alt="Profile Link" id="profile-link" target="_blank">Show all &nbsp;<i
+                class="fa fa-chevron-right" aria-hidden="true"></i></a>-->
+        </h2>
+        <div class="project-area">
+          <div class="project">
+            <a href="/projects/webDM/login-screen/" target="_blank">
+              <img
+                src="./public/img/desktop-normal-state.jpg"
+                class="project-img"
+                alt="Login Screen"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">Login Screen</p>
+            </a>
+          </div>
+          <div class="project">
+            <a href="/projects/goodthings/" target="_blank">
+              <img
+                src="https://s3.bmp.ovh/imgs/2022/04/28/c581eb9805827586.png"
+                class="project-img"
+                alt="10 Good Things"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">10 Good Things</p>
+            </a>
+          </div>
+          <div class="project">
+            <a href="/projects/webDM/notifications-menu/" target="_blank">
+              <img
+                src="./public/img/notic-menu.png"
+                class="project-img"
+                alt="Notifications Menu"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">Notifications Menu</p>
+            </a>
+          </div>
+          <div class="project">
+            <a href="/projects/webDM/profile-widget/" target="_blank">
+              <img
+                src="./public/img/profile-widget.png"
+                class="project-img"
+                alt="Profile Widget"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">Profile Widget</p>
+            </a>
+          </div>
+          <div class="project">
+            <a href="https://codepen.io/hnss/full/YzYMOpx" target="_blank">
+              <img
+                src="https://s3.bmp.ovh/imgs/2022/04/24/3f9033123bf676c6.png"
+                class="project-img"
+                alt="Technical Documentation Page"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">Technical Documentation</p>
+            </a>
+          </div>
+          <div class="project">
+            <a href="https://codepen.io/hnss/full/LYeaxOZ" target="_blank">
+              <img
+                src="https://s3.bmp.ovh/imgs/2022/04/24/d4f9518e4b4741d2.png"
+                class="project-img"
+                alt="Survey Form"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">Survey Form</p>
+            </a>
+          </div>
+          <div class="project">
+            <a href="https://codepen.io/hnss/full/OJzdwqB" target="_blank">
+              <img
+                src="https://s3.bmp.ovh/imgs/2022/04/24/ffbabfc9054be9bc.png"
+                class="project-img"
+                alt="Tribute Page"
+                width="318"
+                height="240"
+              />
+              <p class="project-title">Tribute Page</p>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-        <div class="copy">
-            <h3>The personal page of LuLing</h3>
-            <p>© Created By Hnss. <a id="beian" href="http://www.beian.miit.gov.cn/">粤ICP备17079760号-1</a></p>
-        </div>
-        <div class="find">
-            <h3>Find Me</h3>
-            <ul>
-                <li><a href="https://github.com/kntism"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a></li>
-                <li><a href="https://codepen.io/hnss"><i class="fa fa-codepen" aria-hidden="true"></i> CodePen</a></li>
-                <li><a href="https://twitter.com/hnss" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></li>
-                <li><a href="mailto: loozsky@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> Send a mail</a></li>
-            </ul>
-        </div>
+      <div class="copy">
+        <h3>The personal page of LuLing</h3>
+        <p>
+          © Created By Hnss.
+          <a id="beian" href="http://www.beian.miit.gov.cn/"
+            >粤ICP备17079760号-1</a
+          >
+        </p>
+      </div>
+      <div class="find">
+        <h3>Find Me</h3>
+        <ul>
+          <li>
+            <a href="https://github.com/kntism"
+              ><i class="fa fa-github" aria-hidden="true"></i> GitHub</a
+            >
+          </li>
+          <li>
+            <a href="https://codepen.io/hnss"
+              ><i class="fa fa-codepen" aria-hidden="true"></i> CodePen</a
+            >
+          </li>
+          <li>
+            <a href="https://twitter.com/hnss" target="_blank"
+              ><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a
+            >
+          </li>
+          <li>
+            <a href="mailto: loozsky@gmail.com"
+              ><i class="fa fa-envelope" aria-hidden="true"></i> Send a mail</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
-    <script> 
-        function noneDisplay(str) {
-            let h = window.location.host;
-            if(h == "luling.xyz") {
-                document.getElementById(str).style.display = "none";
-            }
+    <script>
+      function noneDisplay(str) {
+        let h = window.location.host;
+        if (h == "luling.xyz") {
+          document.getElementById(str).style.display = "none";
         }
-        window.onload = noneDisplay('beian');
+      }
+      window.onload = noneDisplay("beian");
     </script>
-</body>
-
+  </body>
 </html>
