update the whole site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="container">
       <section class="welcome">
-        Welcome to { <a href="https://dev.luling.xyz">DEV</a> }.
+        Welcome to { <a href="https://site.luling.xyz">SITE</a> }.
       </section>
     </main>
   </body>
