--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style/home.css" />
     <title>Sites | Lu Ling</title>
   </head>
