--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <main class="container">
       <section class="welcome">
-        Welcome to { <a href="https://site.luling.xyz">Sites</a> }
+        See All of My Favorite {
+        <b><a href="https://site.luling.xyz">Sites</a></b> }
       </section>
       <section class="sites">
         <div class="site">
