feat(calculator): 实现输入框增强与数学表达式计算优化
新增可编辑输入框并支持函数名高亮提示，优化表达式解析逻辑，
提高三角函数及四则运算处理准确性，并完善错误捕获机制。

--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -13,6 +13,15 @@
         width: 250px;
         height: 30px;
       }
+      #input {
+        border: 2px solid black;
+        padding: 8px;
+        font-size: 16px;
+        min-height: 40px;
+      }
+      .can-use-func {
+        color: #201dad;
+      }
     </style>
   </head>
   <body>
@@ -24,7 +33,9 @@
         placeholder="please input equation"
       />
     </div>
+    <div class="centerContainer" id="input" contenteditable="true"></div>
     <script src="./src/hinkFrame.js" type="module"></script>
+    <script src="./src/colerInput.js" type="module"></script>
     <script type="module">
       import { evaluateExpression } from "./src/math.js";
       const inputElement = document.getElementById("usersEquationInput");
