--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -1,55 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/style.css" />
-    <title>Basic Calculator</title>
-    <style>
-      .answer {
-        font-size: 30px;
-      }
-      #usersEquationInput {
-        width: 250px;
-        height: 30px;
-      }
-      #input {
-        border: 2px solid black;
-        padding: 8px;
-        font-size: 16px;
-        min-height: 40px;
-      }
-      .can-use-func {
-        color: #201dad;
-      }
-    </style>
-  </head>
-  <body>
-    <h1 class="mainTitle">Basic Calculator</h1>
-    <div class="centerContainer" id="mainContainer">
-      <input
-        type="text"
-        id="usersEquationInput"
-        placeholder="please input equation"
-      />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style/style.css" />
+  <title>Basic Calculator</title>
+  <style>
+    #basicCalculatorMainTitle {
+      color: #4375e2;
+      font-size: 50px;
+      text-align: center;
+    }
+
+    .answer {
+      font-size: 30px;
+    }
+
+    #usersEquationInput {
+      width: 250px;
+      height: 30px;
+    }
+
+    #input {
+      /* border: 4px solid #000; */
+      background-color: #6db2c7;
+      min-width: 300px;
+      min-height: 30px;
+      flex-grow: 1;
+      border-radius: calc(8px - 4px);
+      padding: 8px;
+      font-size: 16px;
+      text-align: left !important;
+    }
+
+    .can-use-func {
+      color: #1d3fad;
+      font-size: 15px;
+      font-weight: bold;
+    }
+
+    #hinkHr {
+      margin: 0;
+      border: none;
+      background-color: #e2e2e2;
+      height: 2px;
+    }
+
+    #mainContainer {
+      display: flex;
+      flex-direction: column;
+      max-height: 700px;
+    }
+
+    #funcGraph {
+      flex-grow: 1;
+      border: 5px solid #747474;
+      border-radius: 8px;
+    }
+
+    .resizeableBox {
+      width: 500px;
+      height: 800px;
+      display: flex;
+      border: 5px solid #747474;
+      border-radius: 8px;
+      align-items: flex-start
+    }
+
+    #basicCalculator {
+      display: flex;
+    }
+  </style>
+</head>
+
+<body>
+  <h1 id="basicCalculatorMainTitle">Basic Calculator</h1>
+  <div id="basicCalculator"><!--flex -->
+    <div id="mainContainer"><!--flex -->
+      <!-- <input type="text" id="usersEquationInput" placeholder="please input equation" />value -->
+      <div class="resizeableBox" id="basicCal"><!--flex -->
+        <div id="input" contenteditable="true"></div>
+      </div>
+      <div class="resizeableBox" id="funcCal"></div><!--flex -->
+      <div class="resizeableBox" id="statisticsCal"></div><!--flex -->
     </div>
-    <div class="centerContainer" id="input" contenteditable="true"></div>
-    <script src="./src/hinkFrame.js" type="module"></script>
-    <script src="./src/colerInput.js" type="module"></script>
-    <script type="module">
-      import { evaluateExpression } from "./src/math.js";
-      const inputElement = document.getElementById("usersEquationInput");
-      const container = document.getElementById("mainContainer");
-      document.addEventListener("keydown", function (event) {
-        if (event.key === "Enter") {
-          if (inputElement.value === "") {
-            alert("There is no equation to calculate");
-          } else {
-            const result = evaluateExpression(inputElement.value);
-            container.innerHTML = `<h1 class="answer">${result}</h1>`;
-          }
+    <div id="funcGraph"></div>
+  </div>
+
+  <script src="./src/hinkFrame.js" type="module"></script>
+  <script src="./src/colerInput.js" type="module"></script>
+  <script type="module">
+    import { evaluateExpression } from "./src/math.js";
+    const inputElement = document.getElementById("input");
+    const container = document.getElementById("mainContainer");
+    document.addEventListener("keydown", function (event) {
+      if (event.key === "Enter") {
+        console.log(`cal!!! ${inputElement.textContent}`);
+        if (inputElement.textContent === "") {
+          alert("There is no equation to calculate");
+        } else {
+          const result = evaluateExpression(inputElement.textContent);
+          container.innerHTML = `<h1 class="answer">${result}</h1>`;
         }
-      });
-    </script>
-  </body>
+      }
+    });
+  </script>
+</body>
+
 </html>
