--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.css" />
     <style>
+      main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .mainTitle {
+        font-size: 50px;
+        text-align: center;
+      }
       #buttonToCal {
         width: 150px;
         height: 50px;
