--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -9,10 +9,13 @@
       .abrazineGlassStyle {
         min-width: 100px;
         min-height: 30px;
-        background-color: #ffffff11;
-        border-radius: 10px;
+        background: transparent;
+        outline: none;
+        border: none;
+        /* background-color: #ffffff11; */
+        border-radius: 15px;
         backdrop-filter: blur(2px);
-        box-shadow: 1px 1px 7px #ddd inset;
+        box-shadow: 1px 1px 7px #ddd inset, 2px 2px 15px rgba(0, 0, 0, 0.5);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -29,13 +32,16 @@
       }
 
       #basicCalculatorMainTitle {
-        color: #4375e2;
+        color: #3653b3;
+        text-shadow: 0 0 1px #3653b3;
         font-size: 50px;
         text-align: center;
       }
 
       .answer {
         font-size: 20px;
+        display: block;
+        margin: 4px 2px;
       }
 
       #usersEquationInput {
@@ -44,31 +50,39 @@
       }
 
       #input {
-        /* border: 4px solid #000; */
-        background-color: #6db2c7;
-        min-width: 300px;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        word-break: break-all;
+        overflow-wrap: break-word;
+        background-color: #686868;
+        /* width: 100%; */
         min-height: 30px;
-        flex-grow: 1;
-        border-radius: calc(8px - 4px);
-        padding: 8px;
+        /* flex-grow: 1; */
+        border-radius: calc(8px - 1px);
+        padding: 6px;
         font-size: 20px;
         text-align: left !important;
         font-family: sans-serif;
         position: relative;
         z-index: 1;
+        overflow-x: hidden;
+        outline: none;
       }
 
       .inputFrame {
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
-        background-color: #e2e2e2;
-        border-radius: calc(8px - 4px);
-        padding: 0%;
+        background-color: #686868;
+        border-radius: calc(8px - 1px);
+        padding: 0px;
+        /* margin: 0px; */
+        width: 100%;
+        transition: height 1s;
       }
 
       .can-use-func {
-        color: #1d3fad;
+        color: #3653b3;
+        text-shadow: 0 0 2px #3653b3;
         font-size: 20px;
         font-weight: bold;
       }
@@ -88,21 +102,26 @@
 
       #funcGraph {
         flex-grow: 1;
-        border: 5px solid #747474;
-        border-radius: 8px;
+        /* border: 5px solid #747474; */
+        border-radius: 15px;
       }
 
       .resizeableBox {
         width: 500px;
         height: 800px;
         display: flex;
-        border: 4px solid #747474;
-        border-radius: 8px;
+        /* border: 4px solid #747474; */
+        border-radius: 15px;
         align-items: flex-start;
       }
 
       #basicCalculator {
         display: flex;
+      }
+
+      .shadowBox {
+        position: absolute; /* 脱离文档流，不影响布局 */
+        visibility: hidden; /* 隐藏但保留布局，确保高度计算准确 */
       }
     </style>
   </head>
@@ -114,18 +133,18 @@
       <div id="mainContainer">
         <!--flex -->
         <!-- <input type="text" id="usersEquationInput" placeholder="please input equation" />value -->
-        <div class="resizeableBox" id="basicCal">
+        <div class="resizeableBox abrazineGlassStyle" id="basicCal">
           <!--flex -->
           <div class="inputFrame">
             <div id="input" contenteditable="true"></div>
           </div>
         </div>
-        <div class="resizeableBox" id="funcCal"></div>
+        <div class="resizeableBox abrazineGlassStyle" id="funcCal"></div>
         <!--flex -->
-        <div class="resizeableBox" id="statisticsCal"></div>
+        <div class="resizeableBox abrazineGlassStyle" id="statisticsCal"></div>
         <!--flex -->
       </div>
-      <div id="funcGraph"></div>
+      <div id="funcGraph" class="abrazineGlassStyle"></div>
     </div>
 
     <script src="./src/hinkFrame.js" type="module"></script>
@@ -134,17 +153,89 @@
       import { evaluateExpression } from "./src/math.js";
       const inputElement = document.getElementById("input");
       const container = document.getElementsByClassName("inputFrame")[0];
-      document.addEventListener("keydown", function (event) {
+      inputElement.addEventListener("input", function (event) {
+        inputElement.style.removeProperty("height");
+        inputElement.classList.add("min-height");
+      });
+      inputElement.addEventListener("keydown", function (event) {
         if (event.key === "Enter") {
-          console.log(`cal!!! ${inputElement.textContent}`);
+          if (container.querySelector("p.answer")) {
+            container.removeChild(container.querySelector("p.answer"));
+            // inputElement.appendChild(answerElement);
+          }
+          console.log(`cal!!! ${container.childNodes}`);
           if (inputElement.textContent === "") {
             alert("There is no equation to calculate");
           } else {
             const result = evaluateExpression(inputElement.textContent);
-            if (container.querySelector("p.answer")) {
-              container.removeChild(container.querySelector("p.answer"));
+            console.log(`----text content: ${inputElement.textContent}`);
+            const answerElement = document.createElement("p");
+            answerElement.className = "answer";
+            container.appendChild(answerElement);
+            const resultContent = ` = ${result}`;
+            // answerElement.textContent = resultContent;
+            let i = 0; // 声明并初始化计数器
+
+            const typingInterval = setInterval(function () {
+              if (i < resultContent.length) {
+                answerElement.textContent += resultContent[i];
+                i++;
+              } else {
+                clearInterval(typingInterval); // 清除定时器
+              }
+            }, 60);
+
+            /*const inputPadding =
+                getComputedStyle(inputElement).getPropertyValue("padding");
+              const nowInputHeight =
+                inputElement.offsetHeight - 2 * inputPadding;
+              inputElement.classList.remove("min-height");
+              inputElement.style.height = `${nowInputHeight}px`;
+
+              const keyFramesOfInputFrame = [
+                { height: `${inputElement.offsetHeight}px` },
+                { height: `${inputElement.offsetHeight + 50}px` },
+              ];
+
+              const options = {
+                duration: 500, // 动画时长（毫秒）
+                easing: "linear", // 动画缓动函数
+                iterations: 1, // 循环次数（Infinity 无限循环）
+                direction: "normal", // 播放方向（normal/reverse/alternate 等）
+                fill: "forwards", // 动画结束后保持的状态（forwards 保持结束帧）
+              };
+              const animation = container.animate(
+                keyFramesOfInputFrame,
+                options
+              );
+              animation.play();
+              setTimeout(() => {
+                container.appendChild(answerElement);
+              }, 500);
             }
-            container.innerHTML += `<p class="answer">${result}</p>`;
+            */
+
+            // container.innerHTML += `<p class="answer">${result}</p>`;
+            // const shadowBoxOfInputFrame = document.createElement("div");
+            // shadowBoxOfInputFrame.className = "shadowBox";
+            // const inputFrameStyle = window.getComputedStyle(container);
+            // for (const prop of inputFrameStyle) {
+            //   shadowBoxOfInputFrame.style[prop] = inputFrameStyle[prop];
+            // }
+
+            // shadowBoxOfInputFrame.innerHTML =
+            //   '<div id="input" contenteditable="true"></div>';
+            // shadowBoxOfInputFrame.appendChild(answerElement);
+            // document.body.appendChild(shadowBoxOfInputFrame);
+
+            // const finalHeight = shadowBoxOfInputFrame.offsetHeight;
+            // document.body.removeChild(shadowBoxOfInputFrame);
+
+            // 确保有一个明确的起始高度
+            // const currentHeight = container.offsetHeight;
+            // container.style.height = currentHeight + "px";
+            // container.offsetHeight;
+            // container.style.height = finalHeight + "px";
           }
         }
       });
