feat(calculator): 更新角度单位设置并优化计算逻辑
- 将“angle system”和“arc system”改为“degree system”和“rad system”，
  并新增 general 选项作为默认模式。
- 引入 settings 对象统一管理计算器配置，支持 degree、rad 和 general 模式切换。
- 重构输入事件处理逻辑，将计算结果展示功能独立为 showResult 函数，
  实现打字机效果显示答案。
- 移除冗余的 console.log 调用，清理无用代码。
- 改进数学表达式解析器，支持根据设置自动转换角度单位（deg/rad）。
- 删除旧文件 math2.js，整合计算逻辑至 math.js。
- 样式调整：更新设置面板背景色过渡动画及选择项样式细节。

--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -156,11 +156,12 @@
           <li class="theme">Calculate</li>
           <!-- <li class="listContent">hello</li> -->
           <div class="settingChoice listContent">
-            <span>angle system or arc system</span>
-            <div class="choiceOption abrazineGlassStyle" id="angle-or-arc">
+            <span>degree system or rad system</span>
+            <div class="choiceOption abrazineGlassStyle" id="degree-or-rad">
               <div class="choiceShadow"></div>
-              <div class="choice" id="angleChoice">angle</div>
-              <div class="lastChoice" id="arcChoice">arc</div>
+              <div class="choice" id="generalChoice">general</div>
+              <div class="choice" id="degreeChoice">degree</div>
+              <div class="lastChoice" id="radChoice">rad</div>
             </div>
           </div>
         </ul>
