fix(math): 修复科学计数法与括号表达式计算问题
修复了计算器在处理科学计数法（如 1e+10）时的解析错误，优化了括号表达式的计算逻辑，
并增强了对函数调用及运算符组合的兼容性。同时调整了部分正则匹配规则以支持更复杂的
表达式结构，包括函数嵌套和常量识别。

此外，移除了调试日志语句，并修正了输入事件中光标定位的相关逻辑。

--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -176,7 +176,7 @@
       <nav id="sidebar">
         <ul id="siderPicList">
           <!-- <li>?</li> -->
-          <li><img src="pic\home.svg" /></li>
+          <li><img src="pic/home.svg" /></li>
           <li><img src="pic/setting.svg" /></li>
           <li><img src="pic/about.svg" /></li>
           <li>@</li>
