--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -52,7 +52,7 @@
         padding: 6px;
         font-size: 50px;
         text-align: left !important;
-        font-family: sans-serif;
+        font-family: "JetBrains Mono", monospace, "sans-serif";
         text-shadow: 0 0 2px #ffffff;
         position: relative;
         z-index: 1;
