--- a/calculator/basic-calculator.html
+++ b/calculator/basic-calculator.html
@@ -15,6 +15,7 @@
 
       #rightSide {
         flex-grow: 1;
+        flex-shrink: 1;
         display: flex;
         flex-direction: column;
       }
@@ -80,7 +81,7 @@
       }
 
       .inputIndex {
-        width: 40px;
+        min-width: 40px;
         height: 100%;
         border-radius: 8px 0px 0px 8px;
         background-color: #686868;
